tests/ui/used.stderr
error: attribute must be applied to a `static` variable
  --> $DIR/used.rs:4:1
   |
LL | #[used]
   | ^^^^^^^
LL | fn foo() {}
   | ----------- but this is a function

error: attribute must be applied to a `static` variable
  --> $DIR/used.rs:7:1
   |
LL | #[used]
   | ^^^^^^^
LL | struct Foo {}
   | ------------- but this is a struct

error: attribute must be applied to a `static` variable
  --> $DIR/used.rs:10:1
   |
LL | #[used]
   | ^^^^^^^
LL | trait Bar {}
   | ------------ but this is a trait

error: attribute must be applied to a `static` variable
  --> $DIR/used.rs:13:1
   |
LL | #[used]
   | ^^^^^^^
LL | impl Bar for Foo {}
   | ------------------- but this is a implementation block

error: aborting due to 4 previous errors

